@@ -4,6 +4,10 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES
 GO INTO TRUNK. IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS
 WELL AS TRUNK.  EVERYTHING ELSE GOES INTO TRUNK
 
+2006/09/20
+	* Fixed party_sub_count (TK_POWER) failing when the idle_no_share setting
+	  was disabled. [Skotlex]
+	* Enabled Star Gladiators and Soul Linkers to do /doridori [Skotlex]
 2006/09/19
 	* Merged nocommand mapflag update which allows you to specify min-gm level
 	  required to override the setting (eg: map.gat mapflag nocommand 30), also
